<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textColorWhite"
    tools:context=".addCar.AddNewCarActiviy">


    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/toolbar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_layout">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/general_detail_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/vertical_margin_16"
                android:layout_marginStart="@dimen/vertical_margin_16"
                android:layout_marginTop="@dimen/horizontal_margin_16"
                android:text="@string/general_details"
                android:textColor="@color/colorBottom_navigation_text"
                android:textSize="@dimen/tv_16" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/general_detail_tv"
                android:layout_marginEnd="@dimen/vertical_margin_16"
                android:layout_marginStart="@dimen/vertical_margin_16"
                android:layout_marginTop="@dimen/horizontal_margin_10"
                android:background="@color/colorBottom_navigation_text" />

            <TextView
                android:id="@+id/company_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view"
                android:layout_marginEnd="@dimen/vertical_margin_16"
                android:layout_marginStart="@dimen/vertical_margin_16"
                android:layout_marginTop="@dimen/horizontal_margin_16"
                android:text="@string/company_name"
                android:textSize="@dimen/tv_12" />

            <EditText
                android:id="@+id/company_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/company_name_tv"
                android:layout_marginEnd="@dimen/vertical_margin_16"
                android:layout_marginStart="@dimen/vertical_margin_16"
                android:layout_marginTop="@dimen/horizontal_margin_10"
                android:background="@drawable/round_corner_gray"
                android:hint="@string/enter_company_name"
                android:maxLines="1"
                android:minHeight="40dp"
                android:paddingEnd="@dimen/vertical_padding_6"
                android:paddingStart="@dimen/vertical_padding_6"
                android:singleLine="true"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/tv_14" />


            <TextView
                android:id="@+id/model_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/company_name_et"
                android:layout_marginEnd="@dimen/vertical_margin_16"
                android:layout_marginStart="@dimen/vertical_margin_16"
                android:layout_marginTop="@dimen/horizontal_margin_16"
                android:text="@string/model"
                android:textSize="@dimen/tv_12" />

            <EditText
                android:id="@+id/model_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/model_tv"
                android:layout_marginEnd="@dimen/vertical_margin_16"
                android:layout_marginStart="@dimen/vertical_margin_16"
                android:layout_marginTop="@dimen/horizontal_margin_16"
                android:background="@drawable/round_corner_gray"
                android:hint="@string/enter_car_model"
                android:maxLines="1"
                android:minHeight="40dp"
                android:paddingEnd="@dimen/vertical_padding_6"
                android:paddingStart="@dimen/vertical_padding_6"
                android:singleLine="true"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/tv_14" />

            <TextView
                android:id="@+id/color_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/model_et"
                android:layout_marginEnd="@dimen/vertical_margin_16"
                android:layout_marginStart="@dimen/vertical_margin_16"
                android:layout_marginTop="@dimen/horizontal_margin_16"
                android:text="@string/color"
                android:textSize="@dimen/tv_12" />

            <EditText
                android:id="@+id/color_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/color_tv"
                android:layout_marginEnd="@dimen/vertical_margin_16"
                android:layout_marginStart="@dimen/vertical_margin_16"
                android:layout_marginTop="@dimen/horizontal_margin_10"
                android:background="@drawable/round_corner_gray"
                android:hint="@string/enter_car_color"
                android:maxLines="1"
                android:minHeight="40dp"
                android:paddingEnd="@dimen/vertical_padding_6"
                android:paddingStart="@dimen/vertical_padding_6"
                android:singleLine="true"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/tv_14" />

            <TextView
                android:id="@+id/description_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/color_et"
                android:layout_marginEnd="@dimen/vertical_margin_16"
                android:layout_marginStart="@dimen/vertical_margin_16"
                android:layout_marginTop="@dimen/horizontal_margin_16"
                android:text="@string/car_description"
                android:textSize="@dimen/tv_12" />

            <EditText
                android:id="@+id/description_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description_tv"
                android:layout_marginEnd="@dimen/vertical_margin_16"
                android:layout_marginStart="@dimen/vertical_margin_16"
                android:layout_marginTop="@dimen/horizontal_margin_10"
                android:background="@drawable/round_corner_gray"
                android:ellipsize="end"
                android:hint="@string/enter_car_description"
                android:maxLines="8"
                android:minHeight="40dp"
                android:paddingEnd="@dimen/vertical_padding_6"
                android:paddingStart="@dimen/vertical_padding_6"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/tv_14" />

            <!--Car features -->
            <TextView
                android:id="@+id/features_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description_et"
                android:layout_marginEnd="@dimen/vertical_margin_16"
                android:layout_marginStart="@dimen/vertical_margin_16"
                android:layout_marginTop="@dimen/horizontal_margin_16"
                android:text="@string/car_features"
                android:textColor="@color/colorBottom_navigation_text"
                android:textSize="@dimen/tv_16" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/features_tv"
                android:layout_marginEnd="@dimen/vertical_margin_16"
                android:layout_marginStart="@dimen/vertical_margin_16"
                android:layout_marginTop="@dimen/horizontal_margin_10"
                android:background="@color/colorBottom_navigation_text" />

            <RelativeLayout
                android:id="@+id/fuel_type_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view1"
                android:layout_marginTop="@dimen/horizontal_margin_16"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mielage_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/vertical_margin_16"
                    android:layout_marginStart="@dimen/vertical_margin_16"
                    android:text="@string/mielage_tv"
                    android:textSize="@dimen/tv_12" />

                <EditText
                    android:id="@+id/mielage_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mielage_tv"
                    android:layout_marginEnd="@dimen/vertical_margin_16"
                    android:layout_marginStart="@dimen/vertical_margin_16"
                    android:layout_marginTop="@dimen/horizontal_margin_10"
                    android:layout_toStartOf="@+id/view4"
                    android:background="@drawable/round_corner_gray"
                    android:hint="@string/enter_mielage"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:minHeight="40dp"
                    android:paddingEnd="@dimen/vertical_padding_6"
                    android:paddingStart="@dimen/vertical_padding_6"
                    android:singleLine="true"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/tv_14" />

                <View
                    android:id="@+id/view4"
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/engine_power_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/engine_power_et"
                    android:layout_marginEnd="@dimen/vertical_margin_16"
                    android:text="@string/engine_power"
                    android:textSize="@dimen/tv_12" />

                <EditText
                    android:id="@+id/engine_power_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/engine_power_tv"
                    android:layout_marginEnd="@dimen/vertical_margin_16"
                    android:layout_marginStart="@dimen/vertical_margin_16"
                    android:layout_marginTop="@dimen/horizontal_margin_10"
                    android:layout_toEndOf="@+id/view4"
                    android:background="@drawable/round_corner_gray"
                    android:hint="@string/enter_engine_power"
                    android:inputType="number"
                    android:maxLines="1"
                    android:maxLength="4"
                    android:minHeight="40dp"
                    android:paddingEnd="@dimen/vertical_padding_6"
                    android:paddingStart="@dimen/vertical_padding_6"
                    android:singleLine="true"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/tv_14" />


                <TextView
                    android:id="@+id/fuel_type_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/engine_power_et"
                    android:layout_marginEnd="@dimen/vertical_margin_16"
                    android:layout_marginStart="@dimen/vertical_margin_16"
                    android:layout_marginTop="@dimen/horizontal_margin_16"
                    android:text="@string/fuel_type"
                    android:textSize="@dimen/tv_12" />

                <Spinner
                    android:id="@+id/fuel_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fuel_type_tv"
                    android:layout_marginEnd="@dimen/vertical_margin_16"
                    android:layout_marginStart="@dimen/vertical_margin_16"
                    android:layout_marginTop="@dimen/horizontal_margin_10"
                    android:layout_toStartOf="@+id/view3"
                    android:background="@drawable/round_corner_gray"
                    android:dropDownSelector="@color/textColorPrimary"
                    android:minHeight="40dp"
                    android:spinnerMode="dropdown" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="1dp"
                    android:layout_below="@+id/engine_power_et"
                    android:layout_height="1dp"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/selling_price_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/engine_power_et"
                    android:layout_marginEnd="@dimen/vertical_margin_16"
                    android:layout_marginStart="@dimen/vertical_margin_16"
                    android:layout_marginTop="@dimen/horizontal_margin_16"
                    android:layout_toEndOf="@+id/view3"
                    android:text="@string/selling_price_tv"
                    android:textSize="@dimen/tv_12" />

                <EditText
                    android:id="@+id/selling_price_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/selling_price_tv"
                    android:layout_marginEnd="@dimen/vertical_margin_16"
                    android:layout_marginStart="@dimen/vertical_margin_16"
                    android:layout_marginTop="@dimen/horizontal_margin_10"
                    android:layout_toEndOf="@+id/fuel_type_spinner"
                    android:layout_toRightOf="@+id/view3"
                    android:background="@drawable/round_corner_gray"
                    android:hint="@string/enter_selling_price"
                    android:inputType="number"
                    android:maxLength="5"
                    android:maxLines="1"
                    android:minHeight="40dp"
                    android:paddingEnd="@dimen/vertical_padding_6"
                    android:paddingStart="@dimen/vertical_padding_6"
                    android:singleLine="true"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/tv_14" />
            </RelativeLayout>

            <Button
                android:id="@+id/button_add_car"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/fuel_type_layout"
                android:layout_marginEnd="@dimen/vertical_margin_16"
                android:layout_marginStart="@dimen/vertical_margin_16"
                android:layout_marginTop="42dp"
                android:background="@drawable/round_corner_blue"
                android:text="@string/add_car"
                android:textAllCaps="false"
                android:textColor="@color/textColorWhite" />
        </RelativeLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>